--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h2>От Landing page до eCommerce проектов.</h2><a href="#portfolio" class="btn">Портфолио</a>
       </div>
     </div>
-    <div class="btn-scroll wow fadeIn" data-wow-duration="2s"><a class=" button-down" href="#services">
+    <div class="btn-scroll"><a class=" button-down" href="#services">
         <div class="button-down__link"><i class="fas fa-angle-double-down"></i></div>
       </a>
     </div>
