--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             <li><a href="#technology" class="menu__link">Технологии</a></li>
             <li><a href="#testimonials" class="menu__link">Отзывы</a></li>
             <li><a href="#portfolio" class="menu__link">Портфолио</a></li>
-            <!-- <li><a href="#contact" class="btn header-btn">Контакты</a></li> -->
           </ul>
         </nav>
       </div>
@@ -131,7 +130,7 @@
     <div class="container">
       <div class="testimonials__row">
         <div class="testimonials__name">Отзывы</div>
-        <div class="testimonials__slider wow fadeInUp" data-wow-duration="2.5s">
+        <div class="testimonials__slider wow fadeInUp" dir="rtl" data-wow-duration="2.5s">
           <div class="testimonials__slide">
             <div class="testimonials__image-inner">
               <div class="testimonials__image ibg"><img src="images/testimonials/1.png" alt=""></div>
