--- a/index.html
+++ b/index.html
@@ -237,13 +237,13 @@
                       <li>HTML5 <i class="fab fa-html5"></i></li>
                       <li>CSS3 <i class="fab fa-css3-alt"></i></li>
                       <li>jQuery <i class="fas fa-book-open"></i></li>
-                      <li>Bootstrap 4 <i class="fab fa-bootstrap"></i></li>
                       <li>Flexslider <i class="fab fa-buromobelexperte"></i></li>
                       <li>Swipebox <i class="fas fa-sliders-h"></i></li>
                     </ul>
                   </div>
                 </div>
-                <div class="text__link"><a href="https://www.google.com.ua/" target="_blank" class="btn">Перейти</a>
+                <div class="text__link"><a href="https://snowlip23.github.io/travel/" target="_blank"
+                    class="btn">Перейти</a>
                 </div>
               </div>
             </div>
