--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
       </div>
       <div class="portfolio__row-inner">
         <div class="portfolio__gallery">
-          <div class="portfolio__item wow fadeInUp" data-wow-duration="1.5s" data-id="corporate">
-            <div class="portfolio__item-inner ibg"><img src="images/portfolio/1.png" alt="portfolio"></div>
+          <div class="portfolio__item wow fadeInUp" data-wow-duration="1.5s" data-id="landing">
+            <div class="portfolio__item-inner ibg"><img src="images/portfolio/barber.png" alt="portfolio"></div>
             <div class="overlay">
               <div class="portfolio__text">
                 <div class="text__desc">
@@ -220,7 +220,8 @@
                     </ul>
                   </div>
                 </div>
-                <div class="text__link"><a href="https://www.google.com.ua/" target="_blank" class="btn">Перейти</a>
+                <div class="text__link"><a href="https://snowlip23.github.io/barber-shop/" target="_blank"
+                    class="btn">Перейти</a>
                 </div>
               </div>
             </div>
@@ -244,6 +245,29 @@
                 </div>
                 <div class="text__link"><a href="https://snowlip23.github.io/travel/" target="_blank"
                     class="btn">Перейти</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="portfolio__item wow fadeInUp" data-wow-duration="1.5s" data-id="corporate">
+            <div class="portfolio__item-inner ibg"><img src="images/portfolio/1.png" alt="portfolio"></div>
+            <div class="overlay">
+              <div class="portfolio__text">
+                <div class="text__desc">
+                  <div class="text__desc-title">Набор элементов шаблона:</div>
+                  <div class="text__desc-text">
+                    <ul>
+                      <li>Responsive template <i class="fas fa-layer-group"></i></li>
+                      <li>HTML5 <i class="fab fa-html5"></i></li>
+                      <li>CSS3 <i class="fab fa-css3-alt"></i></li>
+                      <li>jQuery <i class="fas fa-book-open"></i></li>
+                      <li>Bootstrap 4 <i class="fab fa-bootstrap"></i></li>
+                      <li>Flexslider <i class="fab fa-buromobelexperte"></i></li>
+                      <li>Swipebox <i class="fas fa-sliders-h"></i></li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="text__link"><a href="https://www.google.com.ua/" target="_blank" class="btn">Перейти</a>
                 </div>
               </div>
             </div>
@@ -273,29 +297,6 @@
           </div>
           <div class="portfolio__item wow fadeInUp" data-wow-duration="1.5s" data-id="shop">
             <div class="portfolio__item-inner ibg"><img src="images/portfolio/4.png" alt="portfolio"></div>
-            <div class="overlay">
-              <div class="portfolio__text">
-                <div class="text__desc">
-                  <div class="text__desc-title">Набор элементов шаблона:</div>
-                  <div class="text__desc-text">
-                    <ul>
-                      <li>Responsive template <i class="fas fa-layer-group"></i></li>
-                      <li>HTML5 <i class="fab fa-html5"></i></li>
-                      <li>CSS3 <i class="fab fa-css3-alt"></i></li>
-                      <li>jQuery <i class="fas fa-book-open"></i></li>
-                      <li>Bootstrap 4 <i class="fab fa-bootstrap"></i></li>
-                      <li>Flexslider <i class="fab fa-buromobelexperte"></i></li>
-                      <li>Swipebox <i class="fas fa-sliders-h"></i></li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="text__link"><a href="https://www.google.com.ua/" target="_blank" class="btn">Перейти</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio__item wow fadeInUp" data-wow-duration="1.5s" data-id="landing">
-            <div class="portfolio__item-inner ibg"><img src="images/portfolio/5.png" alt="portfolio"></div>
             <div class="overlay">
               <div class="portfolio__text">
                 <div class="text__desc">
